# llvm-project

mlir/include/mlir/Conversion/: Passes.h  Passes.td
mlir/include/mlir/Conversion/SCFToGPU/: SCFToGPUReductionPass.h
mlir/include/mlir/Dialect/SPIRV/IR/: TargetAndABI.h
mlir/include/mlir/Transforms/: Passes.h  Passes.td
mlir/lib/Conversion/GPUToSPIRV/: CMakeLists.txt  GPUToSPIRVPass.cpp
mlir/lib/Conversion/MemRefToSPIRV/: MapMemRefStorageClassPass.cpp
mlir/lib/Conversion/SCFToGPU/: CMakeLists.txt  SCFToGPUReductionPass.cpp
mlir/lib/Dialect/SPIRV/IR/: TargetAndABI.cpp
mlir/lib/Transforms/: CMakeLists.txt  LowerTensorOps.cpp  SimplifyLinalgCopy.cpp
mlir/tools/: CMakeLists.txt
mlir/tools/lower-mlir/: CMakeLists.txt  lower-mlir.cpp
